--- a/src/main/webapp/WEB-INF/html/shop/shopoperation.html
+++ b/src/main/webapp/WEB-INF/html/shop/shopoperation.html
@@ -128,13 +128,24 @@ var _hmt = _hmt || [];
           </div>
         </li>
         <!-- 验证码  kaptcha -->
-        
+        <li>
+          <div class="item-content">
+            <div class="item-inner">
+              <div class="item-title label">验证码</div>
+              <input id="j_captcha" type="text" placeholder="验证码">
+              <div class="item-input">
+                <img id="captcha_img" alt="点击更换" title="点击更换"
+                onclick="changeVerifyCode(this)" src="../Kaptcha" />
+              </div>
+            </div>
+          </div>
+        </li>
       </ul>
     </div>
     <div class="content-block">
       <div class="row">
-        <div class="col-50"><a href="#" class="button button-big button-fill button-danger">取消</a></div>
-        <div class="col-50"><a href="#" class="button button-big button-fill button-success">提交</a></div>
+        <div class="col-50"><a href="#" class="button button-big button-fill button-danger">返回</a></div>
+        <div class="col-50"><a href="#" class="button button-big button-fill button-success" id="submit">提交</a></div>
       </div>
     </div>
   </div>
@@ -145,5 +156,6 @@ var _hmt = _hmt || [];
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
     <script type='text/javascript' src='../resources/js/shop/shopoperation.js' charset='utf-8'></script>
+    <script type='text/javascript' src='../resources/js/common/common.js' charset='utf-8'></script>
   </body>
 </html>
