--- a/src/main/webapp/WEB-INF/html/shop/productcategorymanagement.html
+++ b/src/main/webapp/WEB-INF/html/shop/productcategorymanagement.html
@@ -19,12 +19,12 @@
 		<a class="button button-link button-nav pull-left back"
 	       href="javascript:history.back(-1)"> <span class="icon icon-left"></span> 返回
 	    </a>
-		<h1 class="title">商品分类</h1>
+		<h1 class="title">商品分类管理</h1>
 	</header>
 	<div class="content">
 		<div class="content-block">
 			<div class="row row-product-category">
-				<div class="col-33">商品目录</div>
+				<div class="col-33">类别</div>
 				<div class="col-33">优先级</div>
 				<div class="col-33">操作</div>
 			</div>
