更新商品编辑操作

--- a/src/main/webapp/WEB-INF/html/shop/shopoperation.html
+++ b/src/main/webapp/WEB-INF/html/shop/shopoperation.html
@@ -23,8 +23,9 @@
 
 <link rel="apple-touch-icon-precomposed"
 	href="/assets/img/apple-touch-icon-114x114.png">
-<script src="/assets/js/zepto.js"></script>
-<script src="/assets/js/config.js"></script>
+<link rel="stylesheet" href="https://g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
+<link rel="stylesheet" href="https://g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
+<link rel="stylesheet" href="../resources/css/shop/shopoperation.css">
 <script>
 	//ga
 </script>
