--- a/src/main/webapp/WEB-INF/html/shop/productoperation.html
+++ b/src/main/webapp/WEB-INF/html/shop/productoperation.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<header class="bar bar-nav">
-		<h1 class="title">商品操作</h1>
+		<h1 class="title">商品编辑</h1>
 	</header>
 	<div class="content">
 		<div class="list-block">
@@ -140,7 +140,6 @@
 						</div>
 					</div>
 				</li>
-
 			</ul>
 		</div>
 		<div class="content-block">
