--- a/src/main/webapp/WEB-INF/html/frontend/shoplist.html
+++ b/src/main/webapp/WEB-INF/html/frontend/shoplist.html
@@ -9,9 +9,9 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <link rel="stylesheet"
-	href="https://g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
+	href="../g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
 <link rel="stylesheet"
-	href="https://g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
+	href="../g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
 <link rel="stylesheet" href="../resources/css/frontend/shoplist.css">
 </head>
 <body>
@@ -35,7 +35,7 @@
 				</div>
 			</div>
 			<nav class="bar bar-tab">
-				<a class="tab-item" href="/myo2o/frontend/index" external> <span
+				<a class="tab-item" href="/o2o/frontend/index" external> <span
 					class="icon icon-home"></span> <span class="tab-label">首页</span>
 				</a> <a class="tab-item" href="#" id="me"> <span
 					class="icon icon-me"></span> <span class="tab-label">我</span>
@@ -88,9 +88,7 @@
 	</div>
 	<!--侧边栏  -->
 	<div class="panel-overlay"></div>
-	<!-- Left Panel with Reveal effect -->
-	<div class="panel panel-right panel-cover theme-dark"
-		id='panel-js-demo'>
+	<div class="panel panel-right panel-reveal" id="panel-right-demo">
 		<div class="content-block">
 			<p>
 				<a href="/o2o/frontend/myrecord" class="close-panel">消费记录</a>
@@ -106,11 +104,11 @@
 	</div>
 
 	<script type='text/javascript'
-		src='https://g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
+		src='../g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='https://g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
+		src='../g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='https://g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js'
+		src='../g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js'
 		charset='utf-8'></script>
 	<script type='text/javascript'
 		src='../resources/js/frontend/shoplist.js' charset='utf-8'></script>
