--- a/src/main/webapp/WEB-INF/html/shop/shopoperation.html
+++ b/src/main/webapp/WEB-INF/html/shop/shopoperation.html
@@ -17,14 +17,14 @@
 <!-- Google Web Fonts -->
 
 <link rel="stylesheet"
-	href="https://g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
+	href="../g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
 <link rel="stylesheet"
-	href="https://g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
+	href="../g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
 
 <link rel="apple-touch-icon-precomposed"
 	href="/assets/img/apple-touch-icon-114x114.png">
-<link rel="stylesheet" href="https://g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-<link rel="stylesheet" href="https://g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
+<link rel="stylesheet" href="../g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
+<link rel="stylesheet" href="../g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
 <link rel="stylesheet" href="../resources/css/shop/shopoperation.css">
 <script>
 	//ga
@@ -162,11 +162,11 @@
 
 	</div>
 	<script type='text/javascript'
-		src='https://g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
+		src='../g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='https://g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
+		src='../g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='https://g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
+		src='../g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
 		src='../resources/js/shop/shopoperation.js' charset='utf-8'></script>
 	<script type='text/javascript' src='../resources/js/common/common.js'
