商品展示后台

--- a/src/main/webapp/WEB-INF/html/frontend/shoplist.html
+++ b/src/main/webapp/WEB-INF/html/frontend/shoplist.html
@@ -9,9 +9,9 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <link rel="stylesheet"
-	href="../g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
+	href="https://g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
 <link rel="stylesheet"
-	href="../g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
+	href="https://g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
 <link rel="stylesheet" href="../resources/css/frontend/shoplist.css">
 </head>
 <body>
@@ -35,7 +35,7 @@
 				</div>
 			</div>
 			<nav class="bar bar-tab">
-				<a class="tab-item" href="/o2o/frontend/index" external> <span
+				<a class="tab-item" href="/myo2o/frontend/index" external> <span
 					class="icon icon-home"></span> <span class="tab-label">首页</span>
 				</a> <a class="tab-item" href="#" id="me"> <span
 					class="icon icon-me"></span> <span class="tab-label">我</span>
@@ -59,26 +59,29 @@
 				<!-- 店铺列表在此添加 -->
 				<div class="list-div shop-list">
 					<!-- <div class="card">
-                            <div class="card-header">传统火锅店</div>
-                            <div class="card-content">
-                                <div class="list-block media-list">
-                                    <ul>
-                                        <li class="item-content">
-                                            <div class="item-media">
-                                                <img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="44">
-                                            </div>
-                                            <div class="item-inner">
-                                                <div class="item-subtitle"></div>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                                <span>2015/01/15</span>
-                                <span>5 评论</span>
-                            </div>
-                        </div> -->
+				    <div class="card-header">新的公布:</div>
+				    <div class="card-content">
+				      <div class="list-block media-list">
+				        <ul>
+				          <li class="item-content">
+				            <div class="item-media">
+				              <img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="44">
+				            </div>
+				            <div class="item-inner">
+				              <div class="item-title-row">
+				                <div class="item-title">标题</div>
+				              </div>
+				              <div class="item-subtitle">子标题</div>
+				            </div>
+				          </li>
+				        </ul>
+				      </div>
+				    </div>
+				    <div class="card-footer">
+				      <span>2015/01/15</span>
+				      <span>5 评论</span>
+				    </div>
+				  </div> -->
 				</div>
 				<div class="infinite-scroll-preloader">
 					<div class="preloader"></div>
@@ -104,13 +107,15 @@
 	</div>
 
 	<script type='text/javascript'
-		src='../g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
+		src='https://g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='../g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
+		src='https://g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='../g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js'
+		src='https://g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js'
 		charset='utf-8'></script>
 	<script type='text/javascript'
 		src='../resources/js/frontend/shoplist.js' charset='utf-8'></script>
+	<script type='text/javascript' src='../resources/js/common/common.js'
+		charset='utf-8'></script>
 </body>
 </html>
