--- a/src/main/webapp/WEB-INF/html/frontend/index.html
+++ b/src/main/webapp/WEB-INF/html/frontend/index.html
@@ -9,9 +9,9 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <link rel="stylesheet"
-	href="../g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
+	href="https://g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
 <link rel="stylesheet"
-	href="../g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
+	href="https://g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
 <link rel="stylesheet"
 	href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
 <link rel="stylesheet" href="../resources/css/frontend/index.css">
@@ -89,11 +89,11 @@
 	</div>
 
 	<script type='text/javascript'
-		src='../g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
+		src='https://g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='../g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
+		src='https://g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
-		src='../g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js'
+		src='https://g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js'
 		charset='utf-8'></script>
 	<script type='text/javascript' src='../resources/js/frontend/index.js'
 		charset='utf-8'></script>
