--- a/src/main/webapp/WEB-INF/html/shop/productcategorymanagement.html
+++ b/src/main/webapp/WEB-INF/html/shop/productcategorymanagement.html
@@ -8,8 +8,8 @@
 <link rel="shortcut icon" href="/o2o/favicon.ico">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
-<link rel="stylesheet" href="../g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-<link rel="stylesheet" href="../g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
+<link rel="stylesheet" href="https://g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
+<link rel="stylesheet" href="https://g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
 <!-- 自定义的CSS -->	
 <link rel="stylesheet" href="../resources/css/shop/productcategorymanage.css">	
 	
@@ -45,9 +45,9 @@
 		</div>
 	</div>
 
-	<script type='text/javascript' src='../g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-	<script type='text/javascript' src='../g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-	<script type='text/javascript' src='../g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
+	<script type='text/javascript' src='https://g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
+	<script type='text/javascript' src='https://g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
+	<script type='text/javascript' src='https://g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
 	<script type='text/javascript' src='../resources/js/common/common.js' charset='utf-8'></script>
 	<script type='text/javascript' src='../resources/js/shop/productcategorymanage.js' charset='utf-8'></script>
 </body>
