--- a/src/main/webapp/WEB-INF/html/frontend/shopdetail.html
+++ b/src/main/webapp/WEB-INF/html/frontend/shopdetail.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -30,7 +29,7 @@
 				</a> -->
 			</header>
 			<nav class="bar bar-tab">
-				<a class="tab-item" href="/myo2o/frontend/index" external> <span
+				<a class="tab-item" href="/o2o/frontend/index" external> <span
 					class="icon icon-home"></span> <span class="tab-label">首页</span>
 				</a> <a class="tab-item" href="#" id="me"> <span
 					class="icon icon-me"></span> <span class="tab-label">我</span>
@@ -106,6 +105,7 @@
 				</div>
 			</div>
 		</div>
+
 		<!--侧边栏  -->
 		<div class="panel-overlay"></div>
 		<div class="panel panel-right panel-reveal" id="panel-right-demo">
@@ -136,5 +136,7 @@
 		charset='utf-8'></script>
 	<script type='text/javascript'
 		src='../resources/js/frontend/shopdetail.js' charset='utf-8'></script>
+	<script type='text/javascript' src='../resources/js/local/login.js'
+		charset='utf-8'></script>
 </body>
 </html>
