--- a/src/main/webapp/WEB-INF/html/shop/shopmanagement.html
+++ b/src/main/webapp/WEB-INF/html/shop/shopmanagement.html
@@ -8,8 +8,20 @@
         <link rel="shortcut icon" href="/o2o/favicon.ico">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
-        <link rel="stylesheet" href="https://g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-        <link rel="stylesheet" href="https://g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
+        <link rel="stylesheet"
+	href="https://g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
+<script type='text/javascript' charset='utf-8'>
+	window.jQuery
+			|| document
+					.write(unescape("%3Clink rel='stylesheet' href='../g.alicdn.com/msui/sm/0.6.2/css/sm.min.css'%3E%3C/link%3E"));
+</script>
+<link rel="stylesheet"
+	href="https://g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
+<script type='text/javascript' charset='utf-8'>
+	window.jQuery
+			|| document
+					.write(unescape("%3Clink rel='stylesheet' href='../g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css'%3E%3C/link%3E"));
+</script>
         <link rel="stylesheet" href="../resources/css/shop/shopmanagement.css">
     </head>
 <body>
@@ -38,11 +50,30 @@
         </div>
     </div>
 
-    <script type='text/javascript' src='https://g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-    <script type='text/javascript' src='https://g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-    <script type='text/javascript' src='https://g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
+    <script type='text/javascript'
+		src='https://g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
+	<script type='text/javascript' charset='utf-8'>
+		window.jQuery
+				|| document
+						.write(unescape("%3Cscript type='text/javascript' src='../g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'%3E%3C/script%3E"));
+	</script>
+	<script type='text/javascript'
+		src='https://g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
+	<script type='text/javascript' charset='utf-8'>
+		window.jQuery
+				|| document
+						.write(unescape("%3Cscript type='text/javascript' src='../g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'%3E%3C/script%3E"));
+	</script>
+	<script type='text/javascript'
+		src='https://g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js'
+		charset='utf-8'></script>
+	<script type='text/javascript' charset='utf-8'>
+		window.jQuery
+				|| document
+						.write(unescape("%3Cscript type='text/javascript' src='../g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'%3E%3C/script%3E"));
+	</script>
     <!--引入自定义的js -->
-    <script type='text/javascript' src='../resources/js/shop/shopmanagement.js' charset='utf-8'></script>
     <script type='text/javascript' src='../resources/js/common/common.js' charset='utf-8'></script>
+    <script type='text/javascript' src='../resources/js/shop/shopmanagement.js' charset='utf-8'></script>
 </body>
 </html>
