微信登录和本地登录service层实现

--- a/src/main/webapp/WEB-INF/html/shop/shopoperation.html
+++ b/src/main/webapp/WEB-INF/html/shop/shopoperation.html
@@ -23,20 +23,8 @@
 
 <link rel="apple-touch-icon-precomposed"
 	href="/assets/img/apple-touch-icon-114x114.png">
-<link rel="stylesheet"
-	href="https://g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-<script type='text/javascript' charset='utf-8'>
-	window.jQuery
-			|| document
-					.write(unescape("%3Clink rel='stylesheet' href='../g.alicdn.com/msui/sm/0.6.2/css/sm.min.css'%3E%3C/link%3E"));
-</script>
-<link rel="stylesheet"
-	href="https://g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
-<script type='text/javascript' charset='utf-8'>
-	window.jQuery
-			|| document
-					.write(unescape("%3Clink rel='stylesheet' href='../g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css'%3E%3C/link%3E"));
-</script>
+<link rel="stylesheet" href="https://g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
+<link rel="stylesheet" href="https://g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
 <link rel="stylesheet" href="../resources/css/shop/shopoperation.css">
 <script>
 	//ga
@@ -175,29 +163,13 @@
 	</div>
 	<script type='text/javascript'
 		src='https://g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-	<script type='text/javascript' charset='utf-8'>
-		window.jQuery
-				|| document
-						.write(unescape("%3Cscript type='text/javascript' src='../g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'%3E%3C/script%3E"));
-	</script>
 	<script type='text/javascript'
 		src='https://g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-	<script type='text/javascript' charset='utf-8'>
-		window.jQuery
-				|| document
-						.write(unescape("%3Cscript type='text/javascript' src='../g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'%3E%3C/script%3E"));
-	</script>
 	<script type='text/javascript'
-		src='https://g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js'
-		charset='utf-8'></script>
-	<script type='text/javascript' charset='utf-8'>
-		window.jQuery
-				|| document
-						.write(unescape("%3Cscript type='text/javascript' src='../g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'%3E%3C/script%3E"));
-	</script>
-	<script type='text/javascript' src='../resources/js/common/common.js'
-		charset='utf-8'></script>
+		src='https://g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
 	<script type='text/javascript'
 		src='../resources/js/shop/shopoperation.js' charset='utf-8'></script>
+	<script type='text/javascript' src='../resources/js/common/common.js'
+		charset='utf-8'></script>
 </body>
 </html>
