--- a/src/main/webapp/WEB-INF/html/frontend/productdetail.html
+++ b/src/main/webapp/WEB-INF/html/frontend/productdetail.html
@@ -14,20 +14,12 @@
 <meta name="format-detection" content="telephone=no">
 
 <!-- Google Web Fonts -->
+<link rel="apple-touch-icon-precomposed"
+	href="/assets/img/apple-touch-icon-114x114.png">
 <link rel="stylesheet"
 	href="https://g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-<script type='text/javascript' charset='utf-8'>
-	window.jQuery
-			|| document
-					.write(unescape("%3Clink rel='stylesheet' href='../g.alicdn.com/msui/sm/0.6.2/css/sm.min.css'%3E%3C/link%3E"));
-</script>
 <link rel="stylesheet"
 	href="https://g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
-<script type='text/javascript' charset='utf-8'>
-	window.jQuery
-			|| document
-					.write(unescape("%3Clink rel='stylesheet' href='../g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css'%3E%3C/link%3E"));
-</script>
 <link rel="stylesheet"
 	href="../resources/css/frontend/productdetail.css">
 </head>
@@ -98,26 +90,11 @@
 
 	<script type='text/javascript'
 		src='https://g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-	<script type='text/javascript' charset='utf-8'>
-		window.jQuery
-				|| document
-						.write(unescape("%3Cscript type='text/javascript' src='../g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'%3E%3C/script%3E"));
-	</script>
 	<script type='text/javascript'
 		src='https://g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-	<script type='text/javascript' charset='utf-8'>
-		window.jQuery
-				|| document
-						.write(unescape("%3Cscript type='text/javascript' src='../g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'%3E%3C/script%3E"));
-	</script>
 	<script type='text/javascript'
 		src='https://g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js'
 		charset='utf-8'></script>
-	<script type='text/javascript' charset='utf-8'>
-		window.jQuery
-				|| document
-						.write(unescape("%3Cscript type='text/javascript' src='../g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'%3E%3C/script%3E"));
-	</script>
 	<script type='text/javascript'
 		src='../resources/js/frontend/productdetail.js' charset='utf-8'></script>
 	<script type='text/javascript' src='../resources/js/common/common.js'
