--- a/src/main/webapp/WEB-INF/html/shop/shoplist.html
+++ b/src/main/webapp/WEB-INF/html/shop/shoplist.html
@@ -8,20 +8,8 @@
         <link rel="shortcut icon" href="/o2o/favicon.ico">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
-       <link rel="stylesheet"
-	href="https://g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-<script type='text/javascript' charset='utf-8'>
-	window.jQuery
-			|| document
-					.write(unescape("%3Clink rel='stylesheet' href='../g.alicdn.com/msui/sm/0.6.2/css/sm.min.css'%3E%3C/link%3E"));
-</script>
-<link rel="stylesheet"
-	href="https://g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
-<script type='text/javascript' charset='utf-8'>
-	window.jQuery
-			|| document
-					.write(unescape("%3Clink rel='stylesheet' href='../g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css'%3E%3C/link%3E"));
-</script>
+        <link rel="stylesheet" href="https://g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
+        <link rel="stylesheet" href="https://g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
         <link rel="stylesheet" href="../resources/css/shop/shoplist.css">
     </head>
 <body>
@@ -43,12 +31,17 @@
         </div>
         <div class="content-block">
 			<div class="row">
-				<div class="col-50">
+				<div class="col-33">
+					<!-- 先预占两个按钮，后续完善 -->
+					<a href="" id="log-out"
+						class="button button-big button-fill button-danger">账号绑定</a>
+				</div>
+				<div class="col-33">
 					<!-- 先预占两个按钮，后续完善 -->
 					<a href="" id="log-out"
 						class="button button-big button-fill button-danger">退出系统</a>
 				</div>
-                <div class="col-50">
+                <div class="col-33">
                     <a href=""  id="change-pwd"
                     	class="button button-big button-fill button-success">修改密码</a>
                 </div>
@@ -56,30 +49,9 @@
 		</div>
     </div>
 
-    <script type='text/javascript'
-		src='https://g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-	<script type='text/javascript' charset='utf-8'>
-		window.jQuery
-				|| document
-						.write(unescape("%3Cscript type='text/javascript' src='../g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'%3E%3C/script%3E"));
-	</script>
-	<script type='text/javascript'
-		src='https://g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-	<script type='text/javascript' charset='utf-8'>
-		window.jQuery
-				|| document
-						.write(unescape("%3Cscript type='text/javascript' src='../g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'%3E%3C/script%3E"));
-	</script>
-	<script type='text/javascript'
-		src='https://g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js'
-		charset='utf-8'></script>
-	<script type='text/javascript' charset='utf-8'>
-		window.jQuery
-				|| document
-						.write(unescape("%3Cscript type='text/javascript' src='../g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'%3E%3C/script%3E"));
-	</script>
-	<script type='text/javascript' src='../resources/js/common/common.js'
-		charset='utf-8'></script>
+    <script type='text/javascript' src='https://g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
+    <script type='text/javascript' src='https://g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
+    <script type='text/javascript' src='https://g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
     <script type='text/javascript' src='../resources/js/shop/shoplist.js' charset='utf-8'></script>
 </body>
 </html>
