--- a/src/main/webapp/WEB-INF/html/frontend/index.html
+++ b/src/main/webapp/WEB-INF/html/frontend/index.html
@@ -73,6 +73,12 @@
 			<div class="content-block">
 				<div class="content-block">
 					<p>
+						<a href="/o2o/local/accountbind?usertype=1" class="close-panel">绑定账号</a>
+					</p>
+					<p>
+						<a href="/o2o/local/changepwd?usertype=1"  class="close-panel">修改密码</a>
+					</p>
+					<p>
 						<a href="/o2o/frontend/myrecord" class="close-panel">消费记录</a>
 					</p>
 					<p>
@@ -80,6 +86,9 @@
 					</p>
 					<p>
 						<a href="/o2o/frontend/pointrecord" class="close-panel">兑换记录</a>
+					</p>
+					<p>
+						<a href="#" id="log-out" usertype="1" class="close-panel">登出系统</a>
 					</p>
 					<!-- Click on link with "close-panel" class will close panel -->
 				</div>
@@ -96,6 +105,8 @@
 		src='https://g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js'
 		charset='utf-8'></script>
 	<script type='text/javascript' src='../resources/js/frontend/index.js'
+		charset='utf-8'></script>
+	<script type='text/javascript' src='../resources/js/local/logout.js'
 		charset='utf-8'></script>
 </body>
 </html>
