--- a/src/main/webapp/WEB-INF/html/frontend/productdetail.html
+++ b/src/main/webapp/WEB-INF/html/frontend/productdetail.html
@@ -74,15 +74,27 @@
 		<div class="panel-overlay"></div>
 		<div class="panel panel-right panel-reveal" id="panel-right-demo">
 			<div class="content-block">
-				<p>
-					<a href="/o2o/frontend/myrecord" class="close-panel">消费记录</a>
-				</p>
-				<p>
-					<a href="/o2o/frontend/mypoint" class="close-panel">我的积分</a>
-				</p>
-				<p>
-					<a href="/o2o/frontend/pointrecord" class="close-panel">兑换记录</a>
-				</p>
+				<div class="content-block">
+					<p>
+						<a href="/o2o/local/accountbind?usertype=1" class="close-panel">绑定账号</a>
+					</p>
+					<p>
+						<a href="/o2o/local/changepwd?usertype=1"  class="close-panel">修改密码</a>
+					</p>
+					<p>
+						<a href="/o2o/frontend/myrecord" class="close-panel">消费记录</a>
+					</p>
+					<p>
+						<a href="/o2o/frontend/mypoint" class="close-panel">我的积分</a>
+					</p>
+					<p>
+						<a href="/o2o/frontend/pointrecord" class="close-panel">兑换记录</a>
+					</p>
+					<p>
+						<a href="#" id="log-out" usertype="1" class="close-panel">登出系统</a>
+					</p>
+					<!-- Click on link with "close-panel" class will close panel -->
+				</div>
 				<!-- Click on link with "close-panel" class will close panel -->
 			</div>
 		</div>
@@ -98,6 +110,8 @@
 	<script type='text/javascript'
 		src='../resources/js/frontend/productdetail.js' charset='utf-8'></script>
 	<script type='text/javascript' src='../resources/js/common/common.js'
+		charset='utf-8'></script>
+	<script type='text/javascript' src='../resources/js/local/logout.js'
 		charset='utf-8'></script>
 </body>
 </html>
