--- a/src/main/webapp/WEB-INF/html/local/login.html
+++ b/src/main/webapp/WEB-INF/html/local/login.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>账号绑定</title>
+<title>登录</title>
 <meta name="description"
 	content="MSUI: Build mobile apps with simple HTML, CSS, and JS components.">
 <meta name="author" content="阿里巴巴国际UED前端">
@@ -25,10 +25,7 @@
 	<div class="page-group">
 		<div id="page-layout" class="page">
 			<header class="bar bar-nav">
-				<a class="button button-link button-nav pull-left back"
-					href="/demos/form"> <span class="icon icon-left"></span> 返回
-				</a>
-				<h1 class="title">绑定微信账号</h1>
+				<h1 class="title">登录</h1>
 			</header>
 			<div class="content">
 				<div class="list-block">
@@ -60,7 +57,7 @@
 								</div>
 							</div>
 						</li>
-						<li>
+						<li id="verifyPart" hidden="true">
 							<div class="item-content">
 								<div class="item-media">
 									<i class="icon icon-form-email"></i>
@@ -80,12 +77,8 @@
 				</div>
 				<div class="content-block">
 					<div class="row">
-						<div class="col-50">
-							<a href="#" onclick="javascript :history.back(-1);"
-								class="button button-big button-fill button-danger" id="back">返回</a>
-						</div>
-						<div class="col-50">
-							<a href="#" class="button button-big button-fill" id="submit">绑定</a>
+						<div class="col-100">
+							<a href="#" class="button button-big button-fill" id="submit">登录</a>
 						</div>
 					</div>
 				</div>
@@ -102,80 +95,7 @@
 		charset='utf-8'></script>
 	<script type='text/javascript' src='../resources/js/common/common.js'
 		charset='utf-8'></script>
-	<script type='text/javascript'
-		src='../resources/js/local/accountbind.js' charset='utf-8'></script>
+	<script type='text/javascript' src='../resources/js/local/login.js'
+		charset='utf-8'></script>
 </body>
-
-
-<!-- <body>
-	<header class="bar bar-nav">
-		<h1 class="title">绑定微信</h1>
-	</header>
-	<div class="content">
-		<div class="content-block"></div>
-		<div class="content-block">
-			<ul>
-				<li>
-					<div class="item-content">
-						<div class="item-media">
-							<i class="icon icon-form-name"></i>
-						</div>
-						<div class="item-inner">
-							<input type="text" id="username" placeholder="用户名">
-						</div>
-					</div>
-				</li>
-				<li>
-					<div class="item-content">
-						<div class="item-media">
-							<i class="icon icon-form-name"></i>
-						</div>
-						<div class="item-inner">
-							<input type="password" id="pwd" placeholder="密码">
-						</div>
-					</div>
-				</li>
-				<li id="verifyPart">
-					<div class="item-content">
-						<div class="item-media">
-							<i class="icon icon-form-name"></i>
-						</div>
-						<div class="item-inner">
-							<label for="j_kaptcha" class="item-title label">验证码</label> <input
-								id="j_kaptcha" name="j_kaptcha" type="text"
-								class="form-control in" placeholder="验证码" />
-							<div class="item-input">
-								<img id="kaptcha_img" alt="点击更换" title="点击更换"
-									onclick="changeVerifyCode(this)" src="../Kaptcha" />
-							</div>
-						</div>
-					</div>
-				</li>
-			</ul>
-		</div>
-		<div class="content-block">
-			<div class="row">
-				<div class="col-50">
-					<a href="#" onclick="javascript :history.back(-1);"
-						class="button button-big button-fill button-danger" id="back">返回</a>
-				</div>
-				<div class="col-50">
-					<a href="#" class="button button-big button-fill" id="submit">提交</a>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<script type='text/javascript'
-		src='https://g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-	<script type='text/javascript'
-		src='https://g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-	<script type='text/javascript'
-		src='https://g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js'
-		charset='utf-8'></script>
-	<script type='text/javascript' src='../resources/js/common/common.js'
-		charset='utf-8'></script>
-	<script type='text/javascript'
-		src='../resources/js/local/accountbind.js' charset='utf-8'></script>
-</body> -->
 </html>
