--- a/src/main/webapp/WEB-INF/html/shop/shoplist.html
+++ b/src/main/webapp/WEB-INF/html/shop/shoplist.html
@@ -33,16 +33,16 @@
 			<div class="row">
 				<div class="col-33">
 					<!-- 先预占两个按钮，后续完善 -->
-					<a href="" id="log-out"
+					<a href="/o2o/local/accountbind?usertype=2" id="account-bind"
 						class="button button-big button-fill button-danger">账号绑定</a>
 				</div>
 				<div class="col-33">
 					<!-- 先预占两个按钮，后续完善 -->
-					<a href="" id="log-out"
+					<a href="#" id="log-out" usertype="2"
 						class="button button-big button-fill button-danger">退出系统</a>
 				</div>
                 <div class="col-33">
-                    <a href=""  id="change-pwd"
+                    <a href="/o2o/local/changepwd?usertype=2"  id="change-pwd"
                     	class="button button-big button-fill button-success">修改密码</a>
                 </div>
 			</div>
@@ -53,5 +53,6 @@
     <script type='text/javascript' src='https://g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
     <script type='text/javascript' src='https://g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
     <script type='text/javascript' src='../resources/js/shop/shoplist.js' charset='utf-8'></script>
+    <script type='text/javascript' src='../resources/js/local/logout.js' charset='utf-8'></script>
 </body>
 </html>
