--- a/src/main/webapp/WEB-INF/html/shop/shopmanagement.html
+++ b/src/main/webapp/WEB-INF/html/shop/shopmanagement.html
@@ -21,7 +21,7 @@
             <div class="row">
                 <div class="col-50 mb">
                     <!--增加id,方便在js中操作-->
-                    <a id="shopInfo" href="/o2o/shopadmin/shopoperation" class="button button-big button-fill">店铺信息管理</a>
+                    <a id="shopInfo" href="#" class="button button-big button-fill">店铺信息管理</a>
                 </div>
                 <div class="col-50 mb">
                 	<!-- 商品管理页面 -->
@@ -29,7 +29,7 @@
                 </div>
                 <div class="col-50 mb">
                 	<!-- 商品目录管理-->
-                    <a id="productCategory" href="/o2o/shopadmin/productcategorymanagement" class="button button-big button-fill">商品分类管理</a>
+                    <a id="productCategory" href="#" class="button button-big button-fill">商品分类管理</a>
                 </div>
                 <div class="col-100 mb">
                     <a href="/o2o/shopadmin/shoplist" class="button button-big button-fill button-danger">返回</a>
